// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle field should render autoFocused input 1`] = `
<FieldTemplate
  description="my text input hint"
  errorMessage="My error message"
  isValid={true}
  required={undefined}
>
  <Toggle
    autoFocus={true}
    checked={true}
    className="switch checkbox"
    disabled={false}
    id="myForm"
    label="My input title"
    onBlur={[Function]}
    onChange={[Function]}
  />
</FieldTemplate>
`;

exports[`Toggle field should render disabled input 1`] = `
<FieldTemplate
  description="my text input hint"
  errorMessage="My error message"
  isValid={true}
  required={undefined}
>
  <Toggle
    autoFocus={undefined}
    checked={true}
    className="switch checkbox"
    disabled={true}
    id="myForm"
    label="My input title"
    onBlur={[Function]}
    onChange={[Function]}
  />
</FieldTemplate>
`;

exports[`Toggle field should render input 1`] = `
<FieldTemplate
  description="my text input hint"
  errorMessage="My error message"
  isValid={true}
  required={undefined}
>
  <Toggle
    autoFocus={undefined}
    checked={true}
    className="switch checkbox"
    disabled={false}
    id="myForm"
    label="My input title"
    onBlur={[Function]}
    onChange={[Function]}
  />
</FieldTemplate>
`;
